--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,23 @@
 [metadata]
 description-file = README.md
+
+[flake8]
+max-line-length=100
+exclude=migrations,test,tests,test.py,tests.py
+ignore =
+    # expected 2 blank lines, found 1
+    E302,
+    # at least two spaces before inline comment
+    E261,
+    # whitespace before ','
+    E203,
+    # expected 2 blank lines after class or function definition, found 1
+    E305,
+    # line break after binary operator
+    W504,
+    # missing whitespace around arithmetic operator
+    E226,
+    # too many blank lines
+    E303,
+    # multiple spaces after ','
+    E241
